examples/test/testpolicy14564.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14564
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key36: value26
      key29: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value8
          key2: value10
          key27: value9
      podSelector:
        matchLabels:
          key27: value10
          key33: value44
